[gd_scene load_steps=4 format=3 uid="uid://csco6acg6q3mt"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_komsy"]

[sub_resource type="InputEventAction" id="InputEventAction_5tbvo"]
action = &"pause"

[sub_resource type="Shortcut" id="Shortcut_kf4gt"]
events = [SubResource("InputEventAction_5tbvo")]

[node name="MainMenu" type="VBoxContainer"]
process_mode = 2
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -350.0
offset_right = 500.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_komsy")

[node name="SinglePlayerButton" type="Button" parent="."]
layout_mode = 2
text = "Single Player"

[node name="MultiPlayerButton" type="Button" parent="."]
layout_mode = 2
text = "Multi Player"

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
shortcut = SubResource("Shortcut_kf4gt")
text = "Back"

[connection signal="pressed" from="SinglePlayerButton" to="." method="_on_single_player_button_pressed"]
[connection signal="pressed" from="MultiPlayerButton" to="." method="_on_multi_player_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
